<resources>
    <string name="app_name">MynePyne</string>
    <string name="welcome">welcome</string>
    <string name="mynee">mynee</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign Up here</string>
    <string name="myne_pyne">Myne Pyne</string>
    <string name="what_to_do_today">What to do today?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="hey">Hey</string>
    <string name="you_have_no_task_to_do_today">You have no task to do today!</string>
    <string name="let_s_add_tasks">Let\'s add tasks</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign In here</string>
    <string name="example">Example</string>
    <string name="delete">DELETE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="notify">Notify</string>
    <string name="Home">Homee</string>
    <string name="header">Header</string>
    <string name="description">Description</string>
</resources>


