<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="#090909"

    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            app:srcCompat="@mipmap/ic_logiin_foreground" />

        <EditText
            android:id="@+id/editTextTextEmailAddress3"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="#ecf0f1"
            android:textColorHint="#ecf0f1" />

        <EditText
            android:id="@+id/editTextTextPassword4"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#ecf0f1"
            android:textColorHint="#ecf0f1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:text="@string/login" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/don_t_have_an_account_sign_up_here"
            android:textAlignment="center"
            android:textColor="#ecf0f1" />

    </LinearLayout>
</RelativeLayout>
