<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

xmlns:tools="http://schemas.android.com/tools"
android:layout_height="match_parent"
android:paddingBottom="16dp"
android:paddingLeft="16dp"
android:paddingRight="16dp"
android:paddingTop="16dp"
android:background="#090909"

tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="60dp"
            app:srcCompat="@mipmap/ic_user_foreground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textColor="#70a1ff"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textSize="50sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="180dp"
        android:orientation="vertical">



        <EditText
            android:id="@+id/Username"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button2"
            android:backgroundTint="#57606f"
            android:ems="10"
            android:hint="Enter Username"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="12dp"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textColor="#ecf0f1"
            android:textColorHint="#ecf0f1" />

        <EditText
            android:id="@+id/editTextTextEmailAddress3"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button2"
            android:backgroundTint="#57606f"
            android:ems="10"
            android:hint="@string/enter_email"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textColor="#ecf0f1"
            android:textColorHint="#dcdde1" />


        <EditText
            android:id="@+id/editTextTextPassword4"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/custom_button2"
            android:backgroundTint="#57606f"
            android:ems="10"
            android:hint="Password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textColor="#ecf0f1"
            android:textColorHint="#dcdde1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/custom_button"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="@string/already_have_an_account_sign_in_here"
            android:text="@string/already_have_an_account_sign_in_here"
            android:textAlignment="center"
            android:textColor="#ecf0f1" />

    </LinearLayout>
</RelativeLayout>